src/test/deca/context/valid/assigner.deca
// Description:
//    assigner classiquement
// Resultats:
//
//
//
// Historique:
//    cree le 07/01/2025

{   
    int x;
    x=3;
}