src/test/deca/context/invalid/intitialisation_impossible.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 06/01/2025

{
    


   int a = 3.4;
}
